# request-sim

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  README.md  rust-toolchain.toml
docs/: amadeus-llmbench-comparison.md  arguments.md  runbook-pd-test.md  track-output-blog.md  track-output-design.md
request-sim-macros/: Cargo.toml
request-sim-macros/src/: lib.rs
scripts/: calc_dataset.py  curl_run.sh  downsample_trace.py  explain_gap.py  plot-decode-thpt.py  plot-latency.py  plot-ly.py  plot-prefill-thpt.py  plot.py  plot_bs_tps.py  plot_mem.py  req.json  run.sh  simulate_cache.py  start-client-mooncake.sh  start-client.sh
src/: cache.rs  client.rs  dataset.rs  lib.rs  metrics.rs  mock_server.rs  requester.rs  scale_event.rs  token_sampler.rs  trace_generator.rs
src/apis/: aibrix_api.rs  amadeus_api.rs  distserve_api.rs  mod.rs  openai_api.rs  sgl_api.rs  tgi_api.rs
src/distribution/: gamma.rs  mod.rs
src/protocol/: mod.rs  tgi_protocol.rs
src/protocols/: distserve_protocol.rs  mock_protocol.rs  mod.rs  st_protocol.rs  tgi_api.rs  tgi_protocol.rs  vllm_protocol.rs
src/server/: vllm-client-test.sh  vllm_server.py
