[package]
name = "request-sim"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "trace_generator"
path = "src/trace_generator.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
rand = "0.8.5"
rand_distr = "0.4.3"
reqwest = "0.11.25"
tokenizers = "0.14.0"
flume = "0.11.0"
tokio = { version = "1.36.0", features = ["full"] }
clap = { version = "4.5.2", features = ["derive"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
