[package]
name = "request-sim"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "trace_generator"
path = "src/trace_generator.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "mock_server"
path = "src/mock_server.rs"

[dependencies]
rand = "0.8.5"
rand_distr = "0.4.3"
reqwest = { version = "0.12.5", features = ["json", "native-tls-vendored"] }
tokenizers = "0.14.0"
flume = "0.11.0"
tokio = { version = "1.36.0", features = ["full"] }
clap = { version = "4.5.2", features = ["derive"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
http = "1.1.0"
hyper = { version = "1.4.1", features = ["full"] }
hyper-util = { version = "0.1.7", features = ["full"] }
http-body-util = "0.1.2"
